Arestas dos atributos adicionadas

--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -117,11 +117,32 @@
     "\n",
     "-- Atributos\n",
     "\n",
-    "\n",
     "LOAD CSV WITH HEADERS FROM 'https://raw.githubusercontent.com/VitoriaDMP/Chronos_Parte_1/master/dados/attribute.csv'\n",
     "AS line\n",
-    "CREATE (:Attribute {name: line.name})"
+    "CREATE (:Attribute {name: line.name})\n",
+    "\n",
+    "-- Aresta Atributos gerais\n",
+    "LOAD CSV WITH HEADERS FROM 'https://raw.githubusercontent.com/VitoriaDMP/Chronos_Parte_1/master/dados/aresta_atributo.csv' AS line MATCH(p: Patient {id: line.idpaciente}) MATCH(a: Attribute {name: line.name}) WHERE line.result = 't' CREATE (p)-[:HasAttribute]->(a)\n",
+    "\n",
+    "-- Aresta Atributo Idade:\n",
+    "LOAD CSV WITH HEADERS FROM 'https://raw.githubusercontent.com/VitoriaDMP/Chronos_Parte_1/master/dados/aresta_atributo.csv' AS line MATCH(p: Patient {id: line.idpaciente}) MATCH(a: Attribute {name: line.name}) WHERE line.name = 'age' and line.result <> '?'\n",
+    "CREATE (p)-[:HasAttribute {value: line.result}]->(a)\n",
+    "\n",
+    "-- Aresta Atributo Sexo feminino\n",
+    "LOAD CSV WITH HEADERS FROM 'https://raw.githubusercontent.com/VitoriaDMP/Chronos_Parte_1/master/dados/aresta_atributo.csv' AS line MATCH(p: Patient {id: line.idpaciente}) MATCH(a: Attribute {name: 'female'}) WHERE line.name = 'sex' and line.result = 'F'\n",
+    "CREATE (p)-[:HasAttribute]->(a)\n",
+    "\n",
+    "-- Aresta Atributo Sexo masculino\n",
+    "LOAD CSV WITH HEADERS FROM 'https://raw.githubusercontent.com/VitoriaDMP/Chronos_Parte_1/master/dados/aresta_atributo.csv' AS line MATCH(p: Patient {id: line.idpaciente}) MATCH(a: Attribute {name: 'male'}) WHERE line.name = 'sex' and line.result = 'M'\n",
+    "CREATE (p)-[:HasAttribute]->(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
