--- a/jupyter/trabalho-etapa04.ipynb
+++ b/jupyter/trabalho-etapa04.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "## XQUERY\n",
     "\n",
+    "-- Site\n",
+    "http://videlibri.sourceforge.net/cgi-bin/xidelcgi\n",
+    "\n",
     "-- Retornar quantidade de itens com seus respectivos nomes\n",
     "xquery version \"1.0\";\n",
     "let $banco := banco\n",
